--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-canvas": "^0.1.38",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "4.5.0",
+    "react-native-webview": "^12.0.2",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4"
   },
