--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs": "^4.4.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "axios": "^1.3.6",
+    "base-64": "^1.0.0",
     "expo": "~48.0.11",
     "expo-app-loading": "^2.1.1",
     "expo-av": "~13.2.1",
